--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -18,7 +17,7 @@
   <body>
     <div class="container">
       <div class="grid">
-        <div class="card purple" data-tilt>
+        <div class="card purple">
           <div class="card__header">
             <img
               class="header__image"
@@ -43,7 +42,7 @@
             as a Software Engineer at a VR startup. ”
           </p>
         </div>
-        <div class="card light-gray" data-tilt>
+        <div class="card light-gray">
           <div class="card__header">
             <img
               class="header__image"
@@ -62,7 +61,7 @@
             best investments I’ve made in myself. ”
           </p>
         </div>
-        <div class="card light-small" data-tilt>
+        <div class="card light-small">
           <div class="card__header">
             <img
               class="header__image"
@@ -80,7 +79,7 @@
             enjoy, and make a good living while doing something I love. ”
           </p>
         </div>
-        <div class="card dark-gray" data-tilt>
+        <div class="card dark-gray">
           <div class="card__header">
             <img
               class="header__image"
@@ -104,7 +103,7 @@
             and amazing people. ”
           </p>
         </div>
-        <div class="card light-large" data-tilt>
+        <div class="card light-large">
           <div class="card__header">
             <img
               class="header__image"
